applications/Unity.GrantManager/src/Unity.GrantManager.Web/Pages/GrantApplications/Index.css
#GrantApplicationsTable_filter label {
    font-size: var(--bc-font-size-sm);
    color: var(--bc-colors-grey-text-300);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    margin-bottom: 0;
    margin-right: 5px;
}

#GrantApplicationsTable_filter input {
    margin: 0.25rem;
}

table.dataTable tbody tr {
    cursor: pointer;
}

.dt-select-assignees {
    min-width: 145px;
}

.single-payment {
    border: var(--bs-border-width) solid;
    border-color: var(--bs-border-color);
}

.payment-item {
    background-color: var(--bc-colors-ligh-gray-background);
}


/**CSS for dataTable stateRestore - Save View**/
.container-grant-application .dtsr-background {
    background: rgba(0, 0, 0, 0.5) !important;
}

.cstm-save-view .dt-button-collection {
    width: 230px;
}

.cstm-save-view .dt-button-split a {
    line-height: 35px;
}

.cstm-save-view .dt-button-collection .dt-button-active.dt-button-split > *:first-child:after {
    margin-top: -18px;
}

.container-grant-application .dtsr-creation .dtsr-creation-form .dtsr-form-row:nth-of-type(2) {
    display: none;
}

.container-grant-application .dtsr-creation-title, 
.container-grant-application .dtsr-confirmation-title {
    font-weight: 700;
    font-size: 1.25rem;
}

.container-grant-application .dtsr-confirmation .dtsr-creation-form .dtsr-form-row label, 
.container-grant-application .dtsr-creation .dtsr-creation-form .dtsr-form-row label {
    width: 100%;
    text-align: left;
}

.container-grant-application .dtsr-confirmation .dtsr-creation-form .dtsr-form-row .dtsr-input, 
.container-grant-application .dtsr-creation .dtsr-creation-form .dtsr-form-row .dtsr-input, 
.container-grant-application .dtsr-creation-form input[type=text] {
    width: 100% !important;
}

.container-grant-application .dtsr-confirmation input[type=text],
.container-grant-application .dtsr-creation input[type=text] {
    padding: 0.375rem 0.75rem;
    width: 100%;
}

.container-grant-application .dtsr-name-label {
    font-size: 13px;
    font-weight: 700;
}

.container-grant-application .dtsr-creation input, 
.container-grant-application .dtsr-rename-modal input {
    font-size: var(--bc-font-size);
    color: var(--bc-colors-grey-text-500);
    border-radius: 4px !important;
    border: 2px solid var(--bc-colors-blue-primary);
    text-overflow: ellipsis;
}

.container-grant-application .dtsr-confirmation .dtsr-creation-form .dtsr-form-row,
.container-grant-application .dtsr-creation .dtsr-creation-form .dtsr-form-row {
    display: inherit;
}

.container-grant-application div.dtsr-confirmation div.dtsr-modal-foot,
.container-grant-application div.dtsr-confirmation div.dtsr-confirmation-buttons,
.container-grant-application div.dtsr-creation div.dtsr-modal-foot,
.container-grant-application div.dtsr-creation div.dtsr-confirmation-buttons {
    text-align: left;
}

.container-grant-application div.dtsr-confirmation button, 
.container-grant-application div.dtsr-creation button,
.container-grant-application div.dtsr-confirmation-buttons button {
    color: var(--bc-colors-white-primary-500);
    background-color: var(--bc-colors-blue-primary);
    --bs-btn-active-color: var(--bc-colors-blue-primary-500);
    --bs-btn-active-bg: var(--bc-colors-white-primary);
    --bs-btn-disabled-color: var(--bc-colors-grey-text-100);
    --bs-btn-disabled-bg: var(--bc-colors-white-primary-500);
}

.container-grant-application .dtsr-confirmation button,
.container-grant-application .dtsr-creation button:hover,
.container-grant-application .dtsr-confirmation-buttons button:hover {
    background-color: var(--bc-colors-primary-hover);
    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.18);
    border-color: var(--bc-colors-blue-primary);
}

.container-grant-application .dt-button-split {
    border-radius:inherit;
}

.dt-button-collection.shift-left {
    left: unset !important; 
    right: 0px !important;
}

.action-bar-date-controls .search-action-bar {
    padding-top: 0 !important;
    padding-bottom: 0 !important;
}

.action-bar-date-controls .date-input-filter-div {
    margin-top: 10px;
}

.action-bar-date-controls .date-input-filter-div label.form-label {
    font-size: 13.6px;
    margin-bottom: 0.3rem;
}

.action-bar-date-controls #app_custom_buttons {
    margin-top: 10px;
}

.action-bar-date-controls #dynamicButtonContainerId {
    margin-top: 10px;
}

/**end**/

